merge-anything/main/default/objects/Merge_Job__c/Merge_Job__c.object-meta.xml
<CustomObject>
    <label>Merge Job</label>
    <nameField>
        <displayFormat>MJ-{000000}</displayFormat>
        <label>Merge Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>