merge-anything/main/default/objects/Merge_Job__c/fields/Async_Last_Error__c.field-meta.xml
<CustomField>
    <fullName>Async_Last_Error__c</fullName>
    <label>Async Last Error</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>