merge-anything/main/default/objects/Merge_Job__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <formula>(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + Id)</formula>
    <label>Link</label>
    <type>Text</type>
</CustomField>